- 删除腾讯文档遗留导言 - 删除 “没想好标题” - 重命名 “我传”

--- a/docs/article/土皇帝喵.md
+++ b/docs/article/土皇帝喵.md
@@ -1,8 +1,4 @@
-miaowoo又炸啦！
-
-# 乐子系列丛书导言
-
-导言
+# 土皇帝喵
 
 __插件推荐：__
 
@@ -10,7 +6,7 @@ __插件推荐：__
 
 ### 以下推荐的同功能插件全部开源
 
-#### miaochat 
+#### miaochat
 
 \[聊天\]\[开源\]TrChat —— 全能高级跨服聊天管理系统\(重制版\) \[1\.8\-1\.20\]
 
