--- a/docs/article/留白传.md
+++ b/docs/article/留白传.md
@@ -30,8 +30,6 @@
 
 # 谷歌为什么可以
 
-![](/others/lwz/5.png)
-
 我明白了,谷歌爱国
 
 ![](/others/lwz/6.png)
@@ -111,6 +109,8 @@
 ![](/others/lwz/28.png)
 
 # 转移话题
+
+# 第二次git
 
 ![](/others/lwz/29.png)
 
