--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -2,8 +2,8 @@
 
 # Aternos开服网站
 ![descript](/others/微篇集合/Image_1708761344986.png)
-这人B站视频也是牛逼
-用户名:蛋黄玩游戏 
+
+这人B站视频也是牛逼,用户名:蛋黄玩游戏 
 
 # ess太臃肿CMI好
 
