+ 微篇集合 鲸鱼

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -136,3 +136,8 @@ B站看到
 
 ![descript](/others/微篇集合/20240217202306_45.jpeg)
 
+# wiki万能的嘛?
+
+![](/others/微篇集合/鲸鱼-1.png)
+
+![](/others/微篇集合/鲸鱼-2.png)
