--- a/docs/article/贡献与鸣谢.md
+++ b/docs/article/贡献与鸣谢.md
@@ -15,6 +15,10 @@
 
 lilingfeng(项目贡献者)
 
+![liangcha385](https://avatars.githubusercontent.com/u/108937242)
+
+凉茶是帅哥(文档编写者)
+
 (目前尚未得到完整的文档编写者列表)
 
 # 贡献乐子
