+ 小友老师名言 + 修改Q群链接 - 把黑奴驿站改成黑奴lilingfeng

--- a/docs/article/贡献与鸣谢.md
+++ b/docs/article/贡献与鸣谢.md
@@ -25,7 +25,7 @@ lilingfeng(项目贡献者)
 
 最快的方法:创建一个fork，编写完后PR
 
-你可以选择在 Github / Gitee / QQ 提出issue并给出聊天截图,黑奴驿站看到后会进行收录
+你可以选择在 Github / Gitee / QQ 提出issue并给出聊天截图,黑奴lilingfeng看到后会进行收录
 
 
 
