--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -152,3 +152,13 @@ https://space.bilibili.com/3537115709180227
 # 圈子就是这样臭的
 
 ![](/others/微篇集合/圈子就是这样臭的.png)
+
+# 逆天
+
+![](/others/微篇集合/逆天.jpg)
+
+# 苦力怕论坛攻击MCBBS
+
+https://klpbbs.com/thread-131949-1-1.html
+
+![](/others/微篇集合/苦力怕论坛攻击MCBBS.png)
