--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -4,13 +4,28 @@
 
 ## PlayerGuild
 
+[Guilds(付费)](https://www.spigotmc.org/resources/.66176/)
+
+
 ## PlayerTitle
+
+[]()
+
+[MiniPlayerTitle](https://github.com/DeerGiteaMirror/MiniPlayerTitle)
+[UserPrefix](https://github.com/CarmJos/UserPrefix)
+[DeluxeTags](https://www.spigotmc.org/resources/deluxetags.4390/)
 
 ## RandomShop
 
+可以用TrMenu写
+
 ## CompanionsPlus
 
+[MyPet](https://www.spigotmc.org/resources/mypet.12725/)
+
 ## PlayerTask
+
+[QuestCreator](https://www.spigotmc.org/resources/.38734/)
 
 ## PlayerWarp
 
@@ -18,7 +33,11 @@
 
 ## PlayerPrturn
 
+[RewardsLite](https://www.spigotmc.org/resources/.71784/)
+
 ## AfDianPay
+
+[AifadianPay](https://github.com/meteorOSS/AifadianPay-plugin)
 
 ## PlayerIntersify
 
@@ -40,13 +59,27 @@
 
 ## OfflinePapi
 
+![OfflinePapi](/others/版主米饭传/OfflinePapi1.png)
 
+貌似是这个papi 2.9.0就已经有的功能
+
+![OfflinePapi](/others/版主米饭传/OfflinePapi2.png)
+
+这还有个扩展,让你得到其他玩家的占位符
+
+https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
+
+![OfflinePapi](/others/版主米饭传/OfflinePapi3.png)
+
+还是说这个OfflinePapi有其他的功能?
 
 ## PlayerRace
 
 ## PlayerFatgue
 
 ## PlayerRewards
+
+[ajLeaderBoard](https://www.spigotmc.org/resources/.107027/)
 
 ## MonsterPlus
 
@@ -61,6 +94,8 @@
 DanTiao EX
 
 ## McMmoView
+
+[mcMMOgui](https://www.spigotmc.org/resources/mcmmogui.83311/)
 
 ## ResidenceEnhance
 
