--- a/docs/article/贡献与鸣谢.md
+++ b/docs/article/贡献与鸣谢.md
@@ -19,6 +19,10 @@ lilingfeng(项目贡献者)
 
 凉茶是帅哥(文档编写者)
 
+![lim114514](https://avatars.githubusercontent.com/u/113185430)
+
+lim114514(文档编写者)
+
 (目前尚未得到完整的文档编写者列表)
 
 # 贡献乐子
