--- a/docs/article/贡献与鸣谢.md
+++ b/docs/article/贡献与鸣谢.md
@@ -23,6 +23,10 @@ lilingfeng(项目贡献者)
 
 lim114514(文档编写者)
 
+![Araykal](https://avatars.githubusercontent.com/u/106003113)
+
+Araykal(文档编写者)
+
 (目前尚未得到完整的文档编写者列表)
 
 # 贡献乐子
