+ 微篇集合 建议问ai

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -162,3 +162,10 @@ https://space.bilibili.com/3537115709180227
 https://klpbbs.com/thread-131949-1-1.html
 
 ![](/others/微篇集合/苦力怕论坛攻击MCBBS.png)
+
+# 建议问ai
+
+你不懂还要让人去问ai
+
+![](/others/微篇集合/建议问ai-1.png)
+![](/others/微篇集合/建议问ai-2.png)
