--- a/docs/article/芷溪列传.md
+++ b/docs/article/芷溪列传.md
@@ -541,3 +541,9 @@ A:他们把我做过的事说了一遍
 ![](/others/zxlz/123.jpg)
 
 ### 如果您 **"**** 自学半年 ****java"** 只是这样，您挺可怜的
+
+# 他说不是他骂我
+
+可能他不会用GitHub 所以这样子告诉我
+
+![](/others/zxlz/2024-3-3.png)
