+ 微篇集合 赞美mod性能

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -169,3 +169,7 @@ https://klpbbs.com/thread-131949-1-1.html
 
 ![](/others/微篇集合/建议问ai-1.png)
 ![](/others/微篇集合/建议问ai-2.png)
+
+# 赞美mod性能
+
+![](/others/微篇集合/清目.png)
