+ 微篇集合 未成年退款

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -173,3 +173,9 @@ https://klpbbs.com/thread-131949-1-1.html
 # 赞美mod性能
 
 ![](/others/微篇集合/清目.png)
+
+# 未成年退款
+
+![](/others/微篇集合/未成年退款-1.png)
+
+![](/others/微篇集合/未成年退款-2.png)
