--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -5,11 +5,12 @@
 ## PlayerGuild
 
 [Guilds(付费)](https://www.spigotmc.org/resources/.66176/)
+[SimpleClans](https://www.spigotmc.org/resources/simpleclans.71242/)
 
+[LegendaryGuild](https://github.com/Gyzerc/LegendaryGuild/)
+![LegendaryGuild](/others/版主米饭传/LegendaryGuild.png)
 
 ## PlayerTitle
-
-[]()
 
 [MiniPlayerTitle](https://github.com/DeerGiteaMirror/MiniPlayerTitle)
 [UserPrefix](https://github.com/CarmJos/UserPrefix)
@@ -17,11 +18,17 @@
 
 ## RandomShop
 
-可以用TrMenu写
+### LegendaryDailyShop
+GitHub：https://github.com/Gyzerc/LegendaryDailyShop
+
+文档：https://gyzer.gitbook.io/legendarydailyshop
+
+可以用TrMenu写(bushi
 
 ## CompanionsPlus
 
 [MyPet](https://www.spigotmc.org/resources/mypet.12725/)
+[MyPets](https://www.spigotmc.org/resources/mc-pets-3d-model-pets-mounts.97628/)
 
 ## PlayerTask
 
@@ -29,6 +36,8 @@
 
 ## PlayerWarp
 
+[Player Warps](https://www.spigotmc.org/resources/.66692/)
+[PLAYERWARPS](https://www.spigotmc.org/resources/.79089/)
 [HuskHomesGUI](https://www.spigotmc.org/resources/huskhomesgui.91059/)
 
 ## PlayerPrturn
@@ -50,8 +59,6 @@
 [TrChat](https://github.com/TrPlugins/TrChat)
 
 ## ip2region
-
-无代替，抄的源代码,ess geoip
 
 ## PlayerTop
 
@@ -83,7 +90,13 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 
 ## MonsterPlus
 
+同monster
+
 ## monster
+
+[Infernal Mobs](https://www.spigotmc.org/resources/.2156/)
+[MythicMobs](https://www.spigotmc.org/resources/.5702/)
+[EliteMobs](https://www.spigotmc.org/resources/.40090/)
 
 ## RiceMotd
 
@@ -91,7 +104,7 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 
 ## Fair-DanTiao
 
-DanTiao EX
+看功能描述 这个插件不需要给找替代
 
 ## McMmoView
 
@@ -99,5 +112,4 @@ DanTiao EX
 
 ## ResidenceEnhance
 
-
-米饭大帝的插件能不用就不用
+经典咏流传 点这：https://docs.qq.com/doc/DQ25qVVFSZU9Ua3NY
