--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -60,6 +60,8 @@ GitHub：https://github.com/Gyzerc/LegendaryDailyShop
 
 ## ip2region
 
+[PotatoIpDisplay](https://github.com/dmzz-yyhyy/PotatoIpDisplay)
+
 ## PlayerTop
 
 [ajLeaderBoard](https://www.spigotmc.org/resources/ajleaderboards.85548/)
