+ hmcl.json怎么老出现在桌面

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -179,3 +179,7 @@ https://klpbbs.com/thread-131949-1-1.html
 ![](/others/微篇集合/未成年退款-1.png)
 
 ![](/others/微篇集合/未成年退款-2.png)
+
+# hmcl.json怎么老出现在桌面
+
+![](/others/微篇集合/hmcl.json怎么老出现在桌面.png)
