--- a/docs/article/鲸鱼传.md
+++ b/docs/article/鲸鱼传.md
@@ -147,5 +147,23 @@ QQ:252116787
 
 # 稳的一批
 
-![](/others/鲸鱼传/53.png)
+![](/others/鲸鱼传/54.png)
+
+![](/others/鲸鱼传/55.png)
+
+# 让国际友人也看看
+
+![](/others/鲸鱼传/56.png)
+
+![](/others/鲸鱼传/57.png)
+
+![](/others/鲸鱼传/58.png)
+
+![](/others/鲸鱼传/59.png)
+
+![](/others/鲸鱼传/60.png)
+
+![](/others/鲸鱼传/61.png)
+
+![](/others/鲸鱼传/62.png)
 
