+ 鲸鱼传更新

--- a/docs/article/鲸鱼传.md
+++ b/docs/article/鲸鱼传.md
@@ -167,3 +167,18 @@ QQ:252116787
 
 ![](/others/鲸鱼传/62.png)
 
+![](/others/鲸鱼传/63.png)
+
+![](/others/鲸鱼传/64.png)
+
+![](/others/鲸鱼传/65.png)
+
+![](/others/鲸鱼传/66.png)
+
+![](/others/鲸鱼传/67.png)
+
+![](/others/鲸鱼传/68.png)
+
+![](/others/鲸鱼传/69.png)
+
+![](/others/鲸鱼传/69-1.png)
