--- a/docs/article/鲸鱼传.md
+++ b/docs/article/鲸鱼传.md
@@ -15,6 +15,8 @@ QQ:252116787
 
 ![](/others/鲸鱼传/2.png)
 
+事后分析:从本日志中能得到的消息为Luckperms没有正确加载，核心为Fabric+Banner 1.20.1,得不到什么有用的信息
+
 # 装什么大神
 
 ![](/others/鲸鱼传/3.png)
