--- a/docs/article/天才少女传.md
+++ b/docs/article/天才少女传.md
@@ -1,10 +1,18 @@
 # 天才少女传
 
+## van发给我的
+
 ![](/others/天才少女传/1.png)
+
+## 大佬群里喊话了
 
 ![](/others/天才少女传/2.png)
 
+![](/others/天才少女传/2-1.png)
+
 ![](/others/天才少女传/3.png)
+
+## 大佬准备证据了
 
 ![](/others/天才少女传/4.png)
 
@@ -20,11 +28,17 @@
 
 ![](/others/天才少女传/10.png)
 
+## 自己不会做别人做出来了
+
 ![](/others/天才少女传/11.png)
 
 ![](/others/天才少女传/11-1.png)
 
+![](/others/天才少女传/11-2.png)
+
 ![](/others/天才少女传/12.png)
+
+## 在胡扯什么
 
 ![](/others/天才少女传/13.png)
 
@@ -35,6 +49,8 @@
 ![](/others/天才少女传/15-1.png)
 
 ![](/others/天才少女传/16.png)
+
+## 开始破案
 
 ![](/others/天才少女传/17.png)
 
@@ -53,6 +69,8 @@
 ![](/others/天才少女传/24.png)
 
 ![](/others/天才少女传/25.png)
+
+## 背题背的脑子抽了
 
 ![](/others/天才少女传/26.png)
 
