--- a/docs/article/天才少女传.md
+++ b/docs/article/天才少女传.md
@@ -24,15 +24,47 @@
 
 ![](/others/天才少女传/8.png)
 
+<video width="320" controls loop>
+  <source src="/others/天才少女传/1.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="/others/天才少女传/1.mp4">link to the video</a> instead.</p>
+</video>
+
 ![](/others/天才少女传/9.png)
 
 ![](/others/天才少女传/10.png)
+
+<video width="320" controls loop>
+  <source src="/others/天才少女传/2.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="/others/天才少女传/2.mp4">link to the video</a> instead.</p>
+</video>
 
 ## 自己不会做别人做出来了
 
 ![](/others/天才少女传/11.png)
 
 ![](/others/天才少女传/11-1.png)
+
+<video width="320" controls loop>
+  <source src="/others/天才少女传/3.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="/others/天才少女传/3.mp4">link to the video</a> instead.</p>
+</video>
+
+忘了下面这俩视频在哪的了...
+
+<video width="320" controls loop>
+  <source src="/others/天才少女传/4.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="/others/天才少女传/4.mp4">link to the video</a> instead.</p>
+</video>
+
+<video width="320" controls loop>
+  <source src="/others/天才少女传/5.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="/others/天才少女传/5.mp4">link to the video</a> instead.</p>
+</video>
 
 ![](/others/天才少女传/11-2.png)
 
