--- a/docs/article/鲸鱼传.md
+++ b/docs/article/鲸鱼传.md
@@ -2,11 +2,29 @@
 
 QQ:252116787
 
-神秘代码:13100624928
+姓名        👤：熊彬
+身份证号码     🆔：410327199502011417
+出生年月      ：1995年02月01日
+性别        ：男
+身份证归属地    ：河南省宜阳县
+生肖        ：猪
+星座        ：水瓶座
+农历生日      ：乙亥年 正月初二
+生辰八字      ：乙亥年 丙寅月 癸丑日 午时(假如中午出生)
+手机归属地     ：湖北 武汉
+服务商       ：中国联通
+手机其他信息    ：区号: 027, 邮编: 430000, 区划代码: 420100
+imei      📱：865045038070578
+imei查询地址  ：https://www.imei.info/zh/?imei=865045038070578
+TAC码      ：86504503
+厂商型号      ：Vivo Mobile Communication Co Ltd vivo vivo X9s Plus L
+品牌型号      ：Vivo X9splusl
+学校        ：洛阳理工学院图书馆
+微信号       :wxid_15j5gbdgk4hh62
+快手用户名    :ly31550004
 
-410327199502011417:身份证号 姓名:熊彬
 
-太阳系某处:湖北武汉
+
 
 ![](/others/鲸鱼传/装什么大神.jpg)
 
