--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -5,6 +5,7 @@
 ## PlayerGuild
 
 [Guilds(付费)](https://www.spigotmc.org/resources/.66176/)
+
 [SimpleClans](https://www.spigotmc.org/resources/simpleclans.71242/)
 
 [LegendaryGuild](https://github.com/Gyzerc/LegendaryGuild/)
@@ -13,7 +14,9 @@
 ## PlayerTitle
 
 [MiniPlayerTitle](https://github.com/DeerGiteaMirror/MiniPlayerTitle)
+
 [UserPrefix](https://github.com/CarmJos/UserPrefix)
+
 [DeluxeTags](https://www.spigotmc.org/resources/deluxetags.4390/)
 
 ## RandomShop
@@ -28,16 +31,21 @@ GitHub：https://github.com/Gyzerc/LegendaryDailyShop
 ## CompanionsPlus
 
 [MyPet](https://www.spigotmc.org/resources/mypet.12725/)
+
 [MyPets](https://www.spigotmc.org/resources/mc-pets-3d-model-pets-mounts.97628/)
 
 ## PlayerTask
 
 [QuestCreator](https://www.spigotmc.org/resources/.38734/)
 
+[Chemdah](https://github.com/inrhor/Chemdah)
+
 ## PlayerWarp
 
 [Player Warps](https://www.spigotmc.org/resources/.66692/)
+
 [PLAYERWARPS](https://www.spigotmc.org/resources/.79089/)
+
 [HuskHomesGUI](https://www.spigotmc.org/resources/huskhomesgui.91059/)
 
 ## PlayerPrturn
@@ -88,7 +96,9 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 
 ## PlayerRewards
 
-[ajLeaderBoard](https://www.spigotmc.org/resources/.107027/)
+[MyRedeem](https://www.spigotmc.org/resources/.107027/)
+
+[AnCDK](https://www.spigotmc.org/resources/ancdk.103973/)
 
 ## MonsterPlus
 
@@ -97,7 +107,9 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 ## monster
 
 [Infernal Mobs](https://www.spigotmc.org/resources/.2156/)
+
 [MythicMobs](https://www.spigotmc.org/resources/.5702/)
+
 [EliteMobs](https://www.spigotmc.org/resources/.40090/)
 
 ## RiceMotd
