米饭传排版

--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -126,4 +126,6 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 
 ## ResidenceEnhance
 
+# 经典咏流传
+
 经典咏流传 点这：https://docs.qq.com/doc/DQ25qVVFSZU9Ua3NY
