--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -11,6 +11,10 @@
 [LegendaryGuild](https://github.com/Gyzerc/LegendaryGuild/)
 ![LegendaryGuild](/others/版主米饭传/LegendaryGuild.png)
 
+[ClansLite](https://www.spigotmc.org/resources/.97163/)
+
+[SaberFactions](https://www.spigotmc.org/resources/.69771/)
+
 ## PlayerTitle
 
 [MiniPlayerTitle](https://github.com/DeerGiteaMirror/MiniPlayerTitle)
