大佬认为YYT有错在先

--- a/docs/article/青柠传.md
+++ b/docs/article/青柠传.md
@@ -81,3 +81,7 @@ https://portal.xfywz.cn/
 https://user.qzone.qq.com/821589890
 
 ![](/others/青柠传/27.png)
+
+# 大佬认为YYT有错在先
+
+![](/others/青柠传/28.png)
