青柠大佬又去二群了

--- a/docs/article/青柠传.md
+++ b/docs/article/青柠传.md
@@ -85,3 +85,11 @@ https://user.qzone.qq.com/821589890
 # 大佬认为YYT有错在先
 
 ![](/others/青柠传/28.png)
+
+# 大佬降临mb二群
+
+![](/others/青柠传/29.png)
+
+![](/others/青柠传/30.png)
+
+![](/others/青柠传/31.png)
