尝试修复构建

--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -12,17 +12,17 @@
 
 ## 记录1
 
-![](/other/二人传/记录1.png)
+[点击查看](/other/二人传/记录1.png)
 
 ## 记录2
 
-![](/other/二人传/记录2.png)
+[点击查看](/other/二人传/记录2.png)
 
 ## 记录3
 
-![](/other/二人传/记录3.png)
+[点击查看](/other/二人传/记录3.png)
 
-![](/other/二人传/记录3-1.png)
+[点击查看](/other/二人传/记录3-1.png)
 
 ## 在minebbs发帖
 
