--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -28,12 +28,7 @@
 
 地址：https://www.minebbs.com/threads/26441/
 
-<details>
-  <summary>截图留档</summary>
-
-![](/other/二人传/minebbs-26441留档.png)
-
-</details>
+[截图留档](/other/二人传/minebbs-26441留档.png)
 
 ![](/other/二人传/0金粒.png)
 
