Fix Wiki Delopy

--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -12,25 +12,25 @@
 
 ## 记录1
 
-[点击查看](/other/二人传/记录1.png)
+[点击查看](/others/二人传/记录1.png)
 
 ## 记录2
 
-[点击查看](/other/二人传/记录2.png)
+[点击查看](/others/二人传/记录2.png)
 
 ## 记录3
 
-[点击查看](/other/二人传/记录3.png)
+[点击查看](/others/二人传/记录3.png)
 
-[点击查看](/other/二人传/记录3-1.png)
+[点击查看](/others/二人传/记录3-1.png)
 
 ## 在minebbs发帖
 
 地址：https://www.minebbs.com/threads/26441/
 
-[截图留档](/other/二人传/minebbs-26441留档.png)
+[截图留档](/others/二人传/minebbs-26441留档.png)
 
-![](/other/二人传/0金粒.png)
+![](/others/二人传/0金粒.png)
 
 # 往自传
 
@@ -38,20 +38,20 @@ QQ：3651737898
 
 我发现你改名字和头像了，那我就得把你QQ挂上了
 
-![](/other/二人传/改头像和名字了.png)
+![](/others/二人传/改头像和名字了.png)
 
 ## 二分排查还麻烦？
 
-![](/other/二人传/往-1.png)
+![](/others/二人传/往-1.png)
 
 ## 为米饭而战！
 
 建议先阅读前置剧情：[版主米饭传](版主米饭传.md)
 
-![](/other/二人传/往-2.png)
+![](/others/二人传/往-2.png)
 
-![](/other/二人传/往-3.png)
+![](/others/二人传/往-3.png)
 
 ## 可惜二人传到头了
 
-![](/other/二人传/往-4.png)
+![](/others/二人传/往-4.png)
