野狼传更新

--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -12,23 +12,28 @@
 
 ## 记录1
 
-[点击查看](/others/二人传/记录1.png)
+![](/others/二人传/记录1.png)
 
 ## 记录2
 
-[点击查看](/others/二人传/记录2.png)
+![](/others/二人传/记录2.png)
 
 ## 记录3
 
-[点击查看](/others/二人传/记录3.png)
+![](/others/二人传/记录3.png)
 
-[点击查看](/others/二人传/记录3-1.png)
+![](/others/二人传/记录3-1.png)
 
 ## 在minebbs发帖
 
 地址：https://www.minebbs.com/threads/26441/
 
-[截图留档](/others/二人传/minebbs-26441留档.png)
+<details>
+  <summary>点击展开</summary>
+
+![](/others/二人传/minebbs-26441留档.png)
+
+</details>
 
 ![](/others/二人传/0金粒.png)
 
@@ -55,3 +60,29 @@ QQ：3651737898
 ## 可惜二人传到头了
 
 ![](/others/二人传/往-4.png)
+
+接下来是野狼转
+
+![](/others/二人传/野狼-1.png)
+
+![](/others/二人传/野狼-2.png)
+
+![](/others/二人传/野狼-3.png)
+
+地址：
+
+https://github.com/TRCStudioDean/LiteSignIn/issues/35
+
+https://github.com/ReplayMod/ReplayMod/issues/966
+
+给 ReplayMod 发中文issues的逆天
+
+![](/others/二人传/野狼-4.png)
+
+![](/others/二人传/野狼-5.png)
+
+![](/others/二人传/野狼-6.png)
+
+![](/others/二人传/野狼-7.png)
+
+![](/others/二人传/野狼-8.png)
