更新二人传

--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -4,11 +4,11 @@
 
 ![](/others/二人传/1.jpg)
 
-## 往自大佬
+## 往自大佬挂野狼
 
-记住这个叫往自的，一会要考
+往自大佬在各个群宣传野狼的战绩，记一下往自，一会要考
 
-![](/others/二人传/1.jpg)
+我先翻翻往自转的聊天记录，找到了就补上
 
 ## 记录1
 
@@ -62,6 +62,10 @@ QQ：3651737898
 ## 可惜二人传到头了
 
 ![](/others/二人传/往-4.png)
+
+往自又改名了
+
+![](/others/二人传/往-5.png)
 
 # 野狼传
 
