野狼给WorldEdit发中文issues

--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -94,3 +94,11 @@ https://github.com/ReplayMod/ReplayMod/issues/966
 ![](/others/二人传/野狼-7.png)
 
 ![](/others/二人传/野狼-8.png)
+
+## 给WorldEdit发中文issues
+
+https://github.com/EngineHub/WorldEdit/issues/2545
+
+![](/others/二人传/野狼-9.png)
+
+![](/others/二人传/野狼-9-1.png)
