微篇 龙核群出吗

--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -183,3 +183,7 @@ https://klpbbs.com/thread-131949-1-1.html
 # hmcl.json怎么老出现在桌面
 
 ![](/others/微篇集合/hmcl.json怎么老出现在桌面.png)
+
+# 龙核群出吗
+
+![](/others/微篇集合/龙核群出吗.png)
