--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -187,3 +187,15 @@ https://klpbbs.com/thread-131949-1-1.html
 # 龙核群出吗
 
 ![](/others/微篇集合/龙核群出吗.png)
+
+# 罢黜百家独尊阿里
+
+![](/other/微篇集合/罢黜百家独尊阿里.jpeg)
+
+# 苹果手机服务端
+
+![](/other/微篇集合/苹果手机服务端.png)
+
+# 77云腐竹的警告函
+
+![](/others/微篇集合/77云腐竹的警告函.png)
