--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -55,6 +55,10 @@ QQ：3651737898
 
 建议先阅读前置剧情：[版主米饭传](版主米饭传.md)
 
+图中的 Missing_Love 给乐子文档发了一个 issues， 感兴趣可以看看
+
+https://github.com/8aka-Team/lezi-wiki/issues/40
+
 ![](/others/二人传/往-2.png)
 
 ![](/others/二人传/往-3.png)
