--- a/docs/article/微篇集合.md
+++ b/docs/article/微篇集合.md
@@ -187,3 +187,7 @@ https://klpbbs.com/thread-131949-1-1.html
 # 龙核群出吗
 
 ![](/others/微篇集合/龙核群出吗.png)
+
+# windows整整齐齐一家
+
+![](/others/微篇集合/windows整整齐齐一家.png)
