--- a/docs/article/分身传.md
+++ b/docs/article/分身传.md
@@ -8,7 +8,7 @@
 
 ![](/others/分身传/2.png)
 
-![](/others/分身传/3.png)
+![](/others/分身传/3.jpg)
 
 ![](/others/分身传/4.png)
 
@@ -33,3 +33,5 @@
 ![](/others/分身传/12.png)
 
 去mc百科群然后被人立刻认出了
+
+3803566477 我现在搜这个号还是我的头像和名字
