--- a/docs/article/分身传.md
+++ b/docs/article/分身传.md
@@ -35,3 +35,33 @@
 去mc百科群然后被人立刻认出了
 
 3803566477 我现在搜这个号还是我的头像和名字
+
+![](/others/分身传/13.png)
+
+![](/others/分身传/14.png)
+
+![](/others/分身传/15.png)
+
+![](/others/分身传/16.png)
+
+![](/others/分身传/17.png)
+
+![](/others/分身传/18.png)
+
+![](/others/分身传/19.png)
+
+![](/others/分身传/20.png)
+
+![](/others/分身传/21.png)
+
+![](/others/分身传/22.png)
+
+![](/others/分身传/23.png)
+
+![](/others/分身传/24.png)
+
+![](/others/分身传/25.png)
+
+![](/others/分身传/26.png)
+
+![](/others/分身传/27.png)
