--- a/docs/article/二人传.md
+++ b/docs/article/二人传.md
@@ -106,3 +106,31 @@ https://github.com/EngineHub/WorldEdit/issues/2545
 ![](/others/二人传/野狼-9.png)
 
 ![](/others/二人传/野狼-9-1.png)
+
+## 给mohist发的issues
+
+https://github.com/MohistMC/Mohist/issues/3471
+
+![](/others/二人传/野狼-10.png)
+
+## 给乐子文档pr
+
+https://github.com/8aka-Team/lezi-wiki/pull/54
+
+写了堆莫名其妙的东西，还有和乐子无关的东西，比如这个瓜
+
+![](/others/二人传/野狼-12.png)
+
+甚至传了一个 87M 的视频，咱还得花时间回退掉
+
+以及把嘿鹰挂乐子文档上，在本文档被干掉然后又挂到自己伪造的乐子文档上
+
+![](/others/二人传/野狼-11.png)
+
+发issues骂他了
+
+https://github.com/MinecraftEarthVillage/lezi/issues/1
+
+![](/others/二人传/野狼-13.png)
+
+https://github.com/MinecraftEarthVillage/lezi/issues/1
