docs: 补充大名鼎鼎的雄鹰转

--- a/docs/article/雄鹰传.md
+++ b/docs/article/雄鹰传.md
@@ -4,6 +4,68 @@
 
 雄鹰，男，自称 38 岁。他凭借犀利言论、提问与独特视角的回应，成功吸引众人目光，赢得不少“好评”，还因此收获了“大龄小男孩”这一别具特色的称号。
 
+## 群发哥发力喽
+
+顺带提示（他还威胁：给你个提示，我是像素论坛管理员）
+
+哎呦喂我真慌慌啊 🤣
+
+群发内容：
+
+![](/others/雄鹰传/10-1.png)
+
+![](/others/雄鹰传/10-2.png)
+
+事件经过：
+
+![](/others/雄鹰传/10-3.png)
+
+![](/others/雄鹰传/10-4.png)
+
+![](/others/雄鹰传/10-5.png)
+
+![](/others/雄鹰传/10-6.png)
+
+![](/others/雄鹰传/10-7.png)
+
+![](/others/雄鹰传/10-8.png)
+
+## 给你个提示，我是像素论坛管理员
+
+唯一一个有记录的光速打脸事件 🤣
+
+![](/others/雄鹰传/8-2.png)
+
+![](/others/雄鹰传/8-1.jpg)
+
+## 习近平新思想课本：涉政，我要举报
+
+如标题所示，已位居 🤣
+
+（还扯到跟 mc 有没有贡献上了，真为他丢人 🤣）
+
+![](/others/雄鹰传/9-1.png)
+
+![](/others/雄鹰传/9-2.png)
+
+![](/others/雄鹰传/9-3.png)
+
+![](/others/雄鹰传/9-4.png)
+
+![](/others/雄鹰传/9-5.png)
+
+![](/others/雄鹰传/9-6.png)
+
+![](/others/雄鹰传/9-7.png)
+
+![](/others/雄鹰传/9-8.png)
+
+![](/others/雄鹰传/9-9.jpg)
+
+![](/others/雄鹰传/9-10.png)
+
+![](/others/雄鹰传/9-11.png)
+
 ## 请尊重作者
 
 雄鹰大哥在 米饭的 mc 技术交流群 询问 Citizens NPC 插件“免费版 与 付费版”的区别时，白大佬提示雄鹰这里并适合讨论 Citizens 插件，随后发生如下事件
