更新 版主米饭传.md

--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -4,9 +4,15 @@
 
 ## 基岩版插件=Java 版插件
 
-那你来说：基岩版=Java 版（对吧 🤣）
+那你来说：基岩版=Java 版（对吧）
 
 ![](/others/版主米饭传/基岩版=Java版.jpg)
+
+# 后门
+
+2025/3/30 米饭插件被发现存在后门
+
+https://www.minebbs.com/threads/.35422
 
 # 替代插件
 
