docs: 优化部分文档

--- a/docs/article/樱梦源服务器传.md
+++ b/docs/article/樱梦源服务器传.md
@@ -2,11 +2,15 @@
 
 ## ⚠ 警告：请避开这类服务器，害己害人还受一肚子气
 
+ps：这个属于是乐子文档里最猎奇的一个了
+
 ## 社交信息
 
 ![](/others/樱梦源传/infor.png)
 
 # 工具人是"日本人"
+
+开屏雷击！
 
 ![](/others/樱梦源传/1-1.png)
 
@@ -17,6 +21,8 @@
 ![](/others/樱梦源传/1-4.jpg)
 
 # 不给人看 QQ 空间就封号+骚扰人家老婆
+
+好好好，我不评价 😄
 
 ![](/others/樱梦源传/2-1.png)
 
@@ -46,7 +52,19 @@
 
 ![](/others/樱梦源传/3-4.png)
 
-# 管理群曝：服主男装女+侮辱他人+逼迫开盒+神权 x2
+ps：说实话，听风吟跟他比简直路边一条 😓
+
+再怎么说听风吟是真在花钱给自己改善服务器
+
+听风吟还不会 ban 自己的玩家
+
+隔壁听风吟跟他比还是太纯良了
+
+# 管理群曝：服主男装女+管理相互辱骂+开盒+神权 x2
+
+对于腐竹男装女的 ps：女大学生花费 xxx，只为开好一个神奇宝贝服务器
+
+真是精神续作传承了 🤣
 
 ![](/others/樱梦源传/4-1.png)
 
@@ -190,7 +208,7 @@
 
 ![](/others/樱梦源传/6-19.png)
 
-## 死活不承认圈钱事实+网站国内还没备案（乐，等着管局拔网线）
+## 死活不承认圈钱事实+服务器网站国内还没备案（乐，等着管局拔网线）
 
 ![](/others/樱梦源传/7-1.png)
 
@@ -257,3 +275,7 @@
 ## 樱梦源服务器赞助表（圈钱表）
 
 ![](/others/樱梦源传/9-1.jpg)
+
+## /co i 查熊都要付费获得查看权限
+
+![](/others/樱梦源传/10.jpg)
