--- a/docs/article/贡献与鸣谢.md
+++ b/docs/article/贡献与鸣谢.md
@@ -1,5 +1,6 @@
 # 鸣谢
-感谢以下人员为乐子wiki出的贡献
+
+感谢以下人员为乐子 wiki 出的贡献
 
 如有缺漏,请联系驿站添加
 
@@ -31,9 +32,6 @@ Araykal(文档编写者)
 
 # 贡献乐子
 
-最快的方法:创建一个fork，编写完后PR
+最快的方法:创建一个 fork，编写完后 PR
 
-你可以选择在 Github / Gitee / QQ 提出issue并给出聊天截图,黑奴lilingfeng看到后会进行收录
-
-
-
+你可以选择在 Github / Gitee / Tg 提出 issue 并给出聊天截图,黑奴 lilingfeng 看到后会进行收录
