fix (config, plugin): 修复失效的指向链接，增补校正了插件替换部分

--- a/docs/article/版主米饭传.md
+++ b/docs/article/版主米饭传.md
@@ -37,6 +37,8 @@ https://www.minebbs.com/threads/.35422
 
 [DeluxeTags](https://www.spigotmc.org/resources/deluxetags.4390/)
 
+[MythicPrefixes](https://www.spigotmc.org/resources/100994/)
+
 ## RandomShop
 
 ### LegendaryDailyShop
@@ -47,11 +49,19 @@ GitHub：https://github.com/Gyzerc/LegendaryDailyShop
 
 可以用 TrMenu 写(bushi
 
+[UltimateShop](https://www.spigotmc.org/resources/110601/)
+
 ## CompanionsPlus
 
 [MyPet](https://www.spigotmc.org/resources/mypet.12725/)
 
-[MyPets](https://www.spigotmc.org/resources/mc-pets-3d-model-pets-mounts.97628/)
+[MC Pets](https://www.spigotmc.org/resources/mc-pets-3d-model-pets-mounts.97628/)
+
+[Pet Master](https://www.spigotmc.org/resources/15904/)
+
+[SimplePets](https://modrinth.com/plugin/simplepets)
+
+[Pet Blocks](https://www.spigotmc.org/resources/petblocks-gui-programmable-geysermc-custom-models-mysql-1-21-7.12056/)
 
 ## PlayerTask
 
@@ -59,23 +69,37 @@ GitHub：https://github.com/Gyzerc/LegendaryDailyShop
 
 [Chemdah](https://github.com/inrhor/Chemdah)
 
+[TypeWriter](https://www.spigotmc.org/resources/107748/)
+
+[Quests](https://www.spigotmc.org/resources/3711/)
+
 ## PlayerWarp
 
-[Player Warps](https://www.spigotmc.org/resources/.66692/)
+[Player Warps](https://www.spigotmc.org/resources/66692/)
 
-[PLAYERWARPS](https://www.spigotmc.org/resources/.79089/)
+[PLAYERWARPS](https://www.spigotmc.org/resources/79089/)
 
-[HuskHomesGUI](https://www.spigotmc.org/resources/huskhomesgui.91059/)
+[HuskHomesGUI](https://www.spigotmc.org/resources/91059/)
 
-## PlayerPrturn
+[Waypoints](https://www.spigotmc.org/resources/66647/)
 
-[RewardsLite](https://www.spigotmc.org/resources/.71784/)
+[TargetTracker](https://www.mcbbs.co/thread-2078-1-7.html)
+
+## PlayerReturn
+
+[RewardsLite](https://www.spigotmc.org/resources/71784/)
 
 ## AfDianPay
 
 [AifadianPay](https://github.com/meteorOSS/AifadianPay-plugin)
 
+[SweetCheckout](https://www.minebbs.com/resources/sweetcheckout.10619/)
+
 ## PlayerIntersify
+
+[EnchantBoost（付费）](https://www.minebbs.com/resources/enchantboost-mc.8485/)
+
+[CowReinforce](https://www.mcbbs.co/thread-856-1-1.html)
 
 ## PlayerMenu
 
@@ -85,13 +109,25 @@ GitHub：https://github.com/Gyzerc/LegendaryDailyShop
 
 [TrChat](https://github.com/TrPlugins/TrChat)
 
+[LPC](https://www.spigotmc.org/resources/124951/)
+
 ## ip2region
 
 [PotatoIpDisplay](https://github.com/dmzz-yyhyy/PotatoIpDisplay)
 
+[PlayerIPAdmin](https://klpbbs.com/thread-133354-1-1.html)
+
+[ProvinceIP](https://www.mcbbs.co/thread-3086-1-1.html)
+
 ## PlayerTop
 
-[ajLeaderBoard](https://www.spigotmc.org/resources/ajleaderboards.85548/)
+[ajLeaderBoard](https://www.spigotmc.org/resources/85548/)
+
+[TopPlayers](https://www.spigotmc.org/resources/93996/)（同名非同作者）
+
+[Topper](https://www.spigotmc.org/resources/101325/)
+
+[XLeaderboards](https://modrinth.com/plugin/xleaderboards)
 
 ## OfflinePapi
 
@@ -111,33 +147,49 @@ https://github.com/PlaceholderAPI/PlaceholderAPI/wiki/Placeholders#otherplayer
 
 ## PlayerRace
 
-## PlayerFatgue
+[Spigot-Origins](https://www.spigotmc.org/resources/spigot-origins.108780/)
+
+[Origins-Reborn](https://modrinth.com/plugin/origins-reborn)
+
+## PlayerFatigue
+
+[Endurance](https://www.spigotmc.org/resources/110867/)
+
+[WarZStamina](https://www.minebbs.com/resources/warzstamina-mc.11699/)
+
+[HangStamina](https://www.minebbs.com/resources/hangstamina.11730/)
 
 ## PlayerRewards
 
-[MyRedeem](https://www.spigotmc.org/resources/.107027/)
+[MyRedeem](https://www.spigotmc.org/resources/107027/)
 
-[AnCDK](https://www.spigotmc.org/resources/ancdk.103973/)
+[LiteInvitation](https://www.spigotmc.org/resources/98271/)
 
-## MonsterPlus
+[KukeCDK](https://www.spigotmc.org/resources/120756/)
 
-同 monster
+## MonsterPlus / monster
 
-## monster
+[Infernal Mobs](https://www.spigotmc.org/resources/2156/)
 
-[Infernal Mobs](https://www.spigotmc.org/resources/.2156/)
+[MythicMobs](https://www.spigotmc.org/resources/5702/)
 
-[MythicMobs](https://www.spigotmc.org/resources/.5702/)
-
-[EliteMobs](https://www.spigotmc.org/resources/.40090/)
+[EliteMobs](https://www.spigotmc.org/resources/40090/)
 
 ## RiceMotd
 
-[miniMOTD](https://www.spigotmc.org/resources/.81254/)
+[MiniMOTD](https://www.spigotmc.org/resources/81254/)
+
+[AdvancedNMotd](https://www.spigotmc.org/resources/58677/)
+
+[PistonMOTD](https://www.spigotmc.org/resources/80567/)
+
+[PixelMOTD](https://www.spigotmc.org/resources/37177/)
+
+[黑纱MOTD](https://www.minebbs.com/resources/motd-motdcrape-motd.8677/)
 
 ## Fair-DanTiao
 
-看功能描述 这个插件不需要给找替代
+新版 DuelTimes 3 已集成相关功能。
 
 ## McMmoView
 
