docs: 补充 XC + ymy

--- a/docs/article/樱梦源服务器传.md
+++ b/docs/article/樱梦源服务器传.md
@@ -270,6 +270,10 @@ ps：说实话，听风吟跟他比简直路边一条 😓
 
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=114182779311640&bvid=BV1CGXjYWET2&cid=28931001527&p=1" style="width: 700px; height: 500px;" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
+# 投票清理玩家数据
+
+![](/others/樱梦源传/11.jpg)
+
 # DLC
 
 ## 樱梦源服务器赞助表（圈钱表）
